# ChuSnake

./: .gitignore  CMakeLists.txt  README.md
src/: Apple.hpp  GameBoard.hpp  GameTime.hpp  GameVars.hpp  GameWindow.cpp  GameWindow.hpp  Main.cpp  Snake.cpp  Snake.hpp  Utils.hpp
src/lib/SFML-2.5.1/doc/html/: classsf_1_1Joystick.html  classsf_1_1RenderTexture.html  classsf_1_1RenderWindow.html  classsf_1_1Texture.html  classsf_1_1VertexBuffer.html  deprecated.html  index.html
src/lib/SFML-2.5.1/include/SFML/Graphics/: RenderTexture.hpp  Shape.hpp  Sprite.hpp  Texture.hpp  VertexBuffer.hpp
src/lib/SFML-2.5.1/include/SFML/Window/: Joystick.hpp
src/lib/SFML-2.5.1/lib/cmake/SFML/: SFMLConfig.cmake
